# Multiprocessing-control-structure-based-on-LCM

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: adm_parameter.csv  handler.h  handler.hpp  impPara.lcm  imp_parameter.csv  initPos.csv  init_Motor_angle.csv  js.h  output.csv  robotCmd.h  robotCommand.lcm  robotMotionControl.h  robotState.lcm
include/dynamixel/: dynamixel.h
include/impPara/: impPara.hpp
include/robotCommand/: robotCommand.hpp
include/robotState/: robotState.hpp
src/: dynamixel.cpp  handler.cpp  impCtl.cpp  pub.cpp  robotCmd.cpp  robotMotionControl.cpp  stateEst.cpp  sub.cpp  threadTesting.cpp
